[package]
name = "ultramodmanager-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json5 = "0.4.1"
toml = "0.5.8"
lazy_static = "1.4.0"
dirs = "4.0.0"
cygrind-utils = { git = "https://github.com/cygrind/cygrind-utils.git" }
fs_extra = "1.2.0"
semver = "1.0.14"

[dependencies.serde]
version = "1.0.136"
features = ["derive"]
